<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="#FFF8F8F8"
         >

        <RelativeLayout
            android:id="@+id/register_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" >

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/image_back"
                android:gravity="center_vertical"
                android:text="@string/back"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/register_line"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_below="@id/register_title"
        android:background="@color/devide_line" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/register_line"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:hint="@string/register_name" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/register_name"
       android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:hint="@string/et_password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_sure_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/register_password"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:hint="@string/sure_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_sure"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/register_sure_password"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:background="@drawable/bt_login_bg"
        android:text="@string/sure" />

</RelativeLayout>