<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/iv_login_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/iv_login_bg"
        android:src="@drawable/login" />

    <RelativeLayout
        android:id="@+id/rl_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_login_picture"
        android:layout_marginTop="5dp" >

        <LinearLayout
            android:id="@+id/ll_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:hint="@string/et_account_hint"
                android:inputType="text"
                android:padding="5dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:hint="@string/et_password_hint"
                android:inputType="textPassword"
                android:padding="5dp" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/ll_user_info"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_login_bg"
            android:text="@string/bt_login"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bt_login_bg"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <com.jie.view.TextURLView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/forget_password"
        android:textColor="@color/blue"
        android:textSize="18sp" />

</RelativeLayout>