<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white"
    
    >

    <LinearLayout
        android:id="@+id/ll_head"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal" 
        >

        <ImageView
            android:id="@+id/iv_me"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:src="@drawable/me" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </LinearLayout>
        <View 
            android:layout_height="0.5dp"
            android:layout_width="match_parent"
            
            />
        
        
        
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/ll_shape"
        android:id="@+id/ll_recentlyFile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal" 
        >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp"
            android:src="@drawable/me_file" />

        <TextView
            android:id="@+id/tv_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/recently_file" />
    </LinearLayout>

    
    
    
    <LinearLayout
        android:background="@drawable/ll_shape"
        android:id="@+id/ll_fileload"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal" 
        >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp"
            android:src="@drawable/me_download" />

        <TextView
            android:id="@+id/tv_fileload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/fileload" />
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/ll_shape"
        android:id="@+id/ll_location"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        
         >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp"
            android:src="@drawable/me_location" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/location" />
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/ll_shape"
        android:id="@+id/ll_set"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        
         >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp"
            android:src="@drawable/me_set" />

        <TextView
            android:id="@+id/tv_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/me_set" />
    </LinearLayout>

</LinearLayout>